Replaced deprecated constructor: new Integer(int) always creates a new object, whilst Integer.valueOf(int) can reuse cached instances | Sostituito costruttore deprecato