@@ -737,7 +737,7 @@ public class Utils implements Constants {
      * <a href="http://stackoverflow.com/questions/1404210/java-date-vs-calendar">
      * (v.)</a></cite></p>
      * Siccome per motivi di retrocompatibilit&agrave; spesso non va bene
-     * usare un Calendar ma ci vuole una Date (la {@link DBWrapper} usa le Date),
+     * usare un Calendar ma ci vuole una Date (la {@link it.col.db.DBWrapper} usa le Date),
      * viene messo a disposizione questo metodo, che implementa la semplice
      * trasformazione da {@link GregorianCalendar} a {@link Date}.
      *
@@ -795,7 +795,12 @@ public class Utils implements Constants {
         int yearPosition = Calendar.YEAR;
         Calendar rightNow = Calendar.getInstance();
         int year = rightNow.get(yearPosition);
-        Integer yearWrapper = new Integer(year);
+        /* The constructor new Integer(int) is deprecated and marked for removal 
+         * because it always creates a new object, while Integer.valueOf(int) 
+         * can reuse cached instances for certain values (typically 
+         * from -128 to 127) and is more efficient.                             */
+        //Integer yearWrapper = new Integer(year);
+        Integer yearWrapper = Integer.valueOf(year);
         return yearWrapper.toString();
     }
 
@@ -810,7 +815,12 @@ public class Utils implements Constants {
         int hourPosition = Calendar.HOUR_OF_DAY;
         Calendar rightNow = Calendar.getInstance();
         int hour = rightNow.get(hourPosition);
-        Integer hourWrapper = new Integer(hour);
+        /* The constructor new Integer(int) is deprecated and marked for removal 
+         * because it always creates a new object, while Integer.valueOf(int) 
+         * can reuse cached instances for certain values (typically 
+         * from -128 to 127) and is more efficient.                             */
+        //Integer hourWrapper = new Integer(hour);
+        Integer hourWrapper = Integer.valueOf(hour);
         return hourWrapper.toString();
     }
 
@@ -835,14 +845,14 @@ public class Utils implements Constants {
         int minutePosition = Calendar.MINUTE;
         Calendar rightNow = Calendar.getInstance();
         int minutes = rightNow.get(minutePosition);
-        Integer minuteWrapper = new Integer(minutes);
+        Integer minuteWrapper = Integer.valueOf(minutes);
         StringBuffer minutesAsDynamicString = new StringBuffer(minuteWrapper.toString());
         if (minutes < 10) {
             minutesAsDynamicString.insert(0, "0");
         }
         return minutesAsDynamicString.toString();
     }
-
+    
 
     /**
      * <p>Restituisce l'orario corrente sotto forma di oggetto
